AKS-resource-Nginx-Postgre/be-postgre.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-be
spec:
  serviceName: "postgres"
  replicas: 3
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
          name: postgredb
        volumeMounts:
        - name: postgredb
          mountPath: /var/lib/postgresql/data
          subPath: postgres
        - name: secrets-store-keyvault
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: azure-managed-disk
        - name: secrets-store-keyvault
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-kv
        

---
apiVersion: v1
kind: Service
metadata:
  name: postgre-headless
  labels:
    app: postgres
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: postgres
