AKS-resource-Nginx-Postgre/fe-nginx-01.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-headless
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    name: nginx
  clusterIP: None
  selector:
    app: nginx
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
              name: fe-web
          volumeMounts:
            - mountPath: /etc/nginx/conf.d # mount nginx-conf volumn to /etc/nginx
              readOnly: true
              name: nginx-conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
