AKS-resource-Nginx-Postgre/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-headless
            port:
              number: 80
      - path: /nginx02
        pathType: Prefix
        backend:
          service:
            name: nginx02
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-headless
            port:
              number: 80
